--- a/univie_pure/Resources/Private/Partials/Pure/Paginate/Index.html
+++ b/univie_pure/Resources/Private/Partials/Pure/Paginate/Index.html
@@ -1,5 +1,5 @@
 <f:if condition="{settings.pager.insertAbove}">
-    <div class="c-pagination">
+    <div class="c-pagination text-center py-5">
         <f:if condition="{pagination.previousPageNumber} && {pagination.previousPageNumber} >= {pagination.firstPageNumber}">
             <f:then>
                     <span class="first">
